2002-06-06  David Heine <dlheine@tensilica.com>

	* ld-scripts/phdrs2.exp: New file: Run second phdrs test.
	* ld-scripts/phdrs2.s: New file: Dummy assembler source.
	* ld-scripts/phdrs2.t: New file: Linker script with an empty
	section at the start of a loadable segment.

2005-06-02  H.J. Lu <hjl@gnu.org>

	* ld-srec/sr3.cc (__dso_handle): Added for gcc 3.1 with
	-fuse-cxa-atexit.
	(__cxa_atexit): Likewise.

2002-05-30  Richard Henderson  <rth@redhat.com>

	* ld-bootstrap/bootstrap.exp: Test --relax.

2002-05-28  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/libdso-2.d: Tweak for combreloc now default on.

2002-05-07  Richard Sandiford  <rsandifo@redhat.com>

	* lib/ld-lib.exp (run_dump_test): Add -L$srcdir/$subdir.
	(is_elf_format): New, extracted from...
	* ld-scripts/weak.exp: ...here.
	* ld-scripts/overlay-size.exp: New test.
	* ld-scripts/overlay-size.[tsd],
	* ld-scripts/overlay-size-map.d: New files for it.

2002-05-02  Richard Sandiford  <rsandifo@redhat.com>

	* ld-scripts/map-address.exp: Quote conditions.

2002-04-30  Richard Sandiford  <rsandifo@redhat.com>

	* ld-scripts/map-address.exp: New test.
	* ld-scripts/map-address.[td]: New files for it.

2002-04-19  Richard Henderson  <rth@redhat.com>

	* ld-elfvsb/elfvsb.exp: Mirror ia64 non-pic xfails for alpha.
	* ld-shared/shared.exp: Likewise.
	* ld-selective/selective.exp: Disable for alpha.
	* ld-undefined/undefined.exp: Add alpha to dwarf2 xfails.

2002-04-05  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/libdso-2.d, ld-cris/dso-2.s, ld-cris/hide1: New test.

2002-03-19  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/ldsym1.d: New test.

	* ld-mmix/bpo-1.d: Tweak for type of linker-script-symbols no
	longer set to object.
	* ld-mmix/undef-3.d, ld-mmix/start-1.d, ld-mmix/locto-1.d,
	ld-mmix/loct-1.d, ld-mmix/locdo-1.d, ld-mmix/local7.d,
	ld-mmix/local5.d, ld-mmix/local3.d, ld-mmix/local1.d,
	ld-mmix/loc6.d, ld-mmix/loc4.d, ld-mmix/loc3.d, ld-mmix/loc2.d,