@@ -1,23 +1,23 @@
 PHDRS
 {
-  text PT_LOAD ;
-  data PT_LOAD ;
+  Foo PT_LOAD ;
+  Bar PT_LOAD ;
 }
 
 SECTIONS
 {
   . = 0x800000 - 1;
-  /* The PHDRS generated should start at the aligned .text section
+  /* The PHDRS generated should start at the aligned .foo section
      address, not the unaligned .empty section address */
   .empty : { 
 	EMPTY_START = ABSOLUTE(.) ;
 	*(.empty) 
 	EMPTY_END = ABSOLUTE(.) ;
-	} : text
-  .text : { *(.text) } :text
-  .data : { *(.data)
+	} : Foo
+  .foo : { *(.foo) } : Foo
+  .bar : { *(.bar)
 	LONG(EMPTY_START) ;
-	 } :data
+	 } : Bar
 	
   /DISCARD/ : { *(.*) }
 }
