@@ -1,3 +1,10 @@
+2002-06-07  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* ld-scripts/phdrs2.s: Use .p2align instead of .align.
+        Use section names .foo and .bar instead of .text and .data.
+        * ld-scripts/phdrs2.t: Refer to .foo and .bar instead of .text
+        and .data.
+
 2002-06-06  David Heine <dlheine@tensilica.com>
 
 	* ld-scripts/phdrs2.exp: New file: Run second phdrs test.
